<resources>
    <string name="app_name">WashMyLaundry</string>

    <!-- FONT ID -->
    <string name="Roboto_Bold" translatable="false">Roboto-Bold</string>
    <string name="Roboto_Medium" translatable="false">Roboto-Medium</string>
    <string name="Roboto_Light" translatable="false">Roboto-Light</string>
    <string name="Roboto_Thin" translatable="false">Roboto-Thin</string>

    <!-- Base Activity-->
    <string name="error_unknown_error">An unknown error has occurred</string>

    <!-- Drawer-->
    <string name="drawer_category_your_lunch">YOUR ORDERS</string>
    <string name="drawer_category_settings">PROFILE</string>
    <string name="drawer_category_logout">LOGOUT</string>

    <!-- MainActivity (Login)-->
    <string name="error_authentication_canceled">Sign-in attempt was canceled!</string>
    <string name="error_no_internet">No Internet access! The device is offline.</string>
    <string name="login_email">Login with Email</string>
    <string name="login_gmail">Login with Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="secondary_logo_text">Find a nearby service provider</string>
    <string name="welcome_text">Welcome! Please Login:</string>
    <string name="popup_title_permission_location_access">This application needs permissions of location to function correctly.</string>
    <string name="popup_title_permission_gps_access">This application requires to enabled GPS, do you want to enable it?</string>
    <string name="popup_title_permission_gps_enable_btn">Enable</string>
    <string name="need_to_authorise_location_services">In order to access, please authorise location services for this application.</string>
    <string name="connection_succeed">Signed-in</string>
    <string name="connection_multiple_accounts_warning">Attention</string>
    <string name="connection_multiple_user">Another account with the same E-mail is already registered as a PROVIDER in our system. Please try another email</string>
    <string name="connection_multiple_provider">Another account with the same E-mail is already registered as a USER in our system. Please try another email</string>

    <string name="provider_login_title">PROVIDERS</string>

    <!-- SplashScreen -->
    <string name="no_location_found">Error locating the device</string>
    <string name="map_loading_text">Waiting for your current location</string>

    <!--Used in navigation drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <!-- BottomSheet -->
    <string name="edit_bs_title">Edit Profile</string>

    <!-- MainProviderActivity-->
    <string name="provider_phone_not_available">Phone: N/A</string>
    <string name="provider_address_not_available">Address: N/A</string>
    <string name="provider_status_available">Available</string>
    <string name="provider_status_not_available">Not-Available</string>
    <string name="provider_price_rate_dialog">Your Service Rate:</string>
    <string name="provider_max_weight_dialog">Max Weight Per Service:</string>
    <string name="provider_availability_on">Available</string>
    <string name="provider_availability_off">Not Available</string>
    <string name="provider_delivery_on">Delivering</string>
    <string name="provider_delivery_off">Not Delivering</string>
    <string name="provider_ironing_on">Accepting</string>
    <string name="provider_ironing_off">Not Accepting</string>
    <string name="euro_value">€%1$s</string>
    <string name="provider_missing_address_title">Address is Missing !</string>
    <string name="provider_missing_address_content">You need to add an address before you can go available</string>

    <!-- MainProvider Edit-->
    <string name="provider_edit_about_me">About me: I live in Paris and work from home. I have plenty of free time and am looking for opportunities for extra monthly income.</string>

    <!-- MainUserActivity -->
    <string name="for_contacting_your_provider">For contacting your provider, please refer the contact options inside each card of your orders</string>
    <string name="main_user_delivery_service">Delivery Service</string>
    <string name="main_user_display_results_with_delivery_option">Display results with delivery option</string>

    <!--BottomNavigation-->
    <string name="tab_name_1">Map View</string>
    <string name="tab_name_2">List View</string>
    <string name="tab_name_3">My Orders</string>

    <!--General text-->
    <string name="lorem_impsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- PreOrder BottomSheet-->
    <string name="pre_order_provider_service_count">( %1$s Customers)</string>
    <string name="max_bags_15kg">Max %1$s Bags - (5Kg/bag)</string>
    <string name="id_details_euro_kg">€%1$s/Kg</string>
    <string name="pre_order_no_delivery">Delivery is not available</string>

    <!-- OrderState BottomSheet-->
    <string name="order_state_title">Your Order Summery</string>

    <!-- Reservation & State Activity-->
    <string name="reservation_laundry_bags_amount">%1$sX Laundry Bags</string>
    <string name="laundry_bags_price">€%1$s</string>
    <string name="laundry_subtotal_price">€%1$s</string>
    <string name="laundry_fees_price">€%1$s</string>
    <string name="laundry_ironing_price">€%1$s</string>
    <string name="laundry_delivery_price">€%1$s</string>
    <string name="laundry_total_price">€%1$s</string>
    <string name="create_reservation_success">Your order was registered successfully on our system</string>
    <string name="no_available_phone_number">A phone number was not provided. Please try by chat</string>

    <!-- Status display-->
    <string name="currently_available_providers">There are currently %1$s available providers</string>
    <string name="currently_no_available_providers">There are currently no providers available</string>

    <!-- ListViewFragment-->
    <string name="list_view_detail_distance">%1$sm</string>
    <string name="list_view_provider_name">Name</string>
    <string name="list_view_provider_address">Address</string>
    <string name="list_view_provider_rate">Rate: €%1$s/Kg</string>
    <string name="list_view_provider_max_bags">Max Bags: %1$s (5Kg/bag)</string>


    <!-- MyOrdersFragment-->
    <string name="my_orders_recyclerView_provider_name">Provider: %1$s</string>
    <string name="my_orders_recyclerView_client_name">Client: %1$s</string>
    <string name="my_orders_recyclerView_date">On Date: %1$s</string>
    <string name="my_order_recyclerView_price">Order Total: €%1$s</string>
    <string name="my_orders_recyclerView_status">Status</string>
    <string name="my_orders_recycler_view_empty">Your orders list is empty</string>
    <string name="order_status">Order Status: </string>
    <string name="order_state_provider_accept_btn">Accept Order</string>
    <string name="order_state_provider_mark_as_ready">Mark As Ready for delivery</string>
    <string name="order_state_provider_mark_as_delivered">Mark order as delivered</string>
    <string name="order_state_provider_delivered">Delivered</string>


    <!-- ProviderOrdersActivity -->
    <string name="empty_order_list">There are no orders in this section</string>
    <string name="your_orders_title">Your Orders</string>

    <!-- Chat BottomSheet -->
    <string name="chat_layout_no_messages">There are no messages yet</string>
    <string name="chat_layout_write_message_edit_text">Write your message</string>
    <string name="send_btn">Send</string>

    <!-- Rating Activity -->
    <string name="review_hint_text">An excellent experience, I will definitely re-order his services again!</string>
    <string name="hi_user">Hi %1$s</string>
    <string name="tell_us_how_was_your_order_with">Tell us how was your order with: %1$s</string>

    <!-- Notifications -->
    <string name="new_order_received_title">You have a new order awaiting for approval</string>
    <string name="new_order_received_content">Go to your orders list</string>
    <string name="title_new_message">A new message from: %1$s</string>
    <string name="content_message_from">Message: %1$s </string>

    <!--Facebook Login-->
    <string name="facebook_application_id">2528952484009671</string>
    <string name="fb_login_protocol_scheme">fb2528952484009671</string>

    <!--Email Sender-->
    <string name="from_order">orders@wml.com</string>
    <string name="from_chat">chat@wml.com</string>
    <string name="you_have_a_new_message_from_x">You have a new message from %1$s</string>
    <string name="x_message">Message: %1$s</string>
    <string name="new_order_subject">Hi! You have a new order waiting for approval.</string>
    <string name="new_order_message">%1$s made a new order and he\'s waiting for confirmation. \nPlease contact your client as soon as possible.\n \n \nBest regards \nWash My Laundry Team </string>
    <string name="order_accepted_email_subject">Your order was accepted!</string>
    <string name="order_accepted_email_message">Hello %1$s,\n%2$s has confirmed your order and will contact you soon to arrange a pickup for you laundry. \n\n\nIf you have any question or problem, you can contact your provider through the app. \nBest regards, \nWashMyLaundry Team</string>
    <string name="order_delivered_email_subject">Your order is ready for delivery!</string>
    <string name="order_delivered_email_message">Hello %1$s,\n%2$s cleaned and packed your laundry for delivery. \nThe delivery guy will be at your place soon. \n\n\nIf you have any question or problem, you can contact your provider through the app. \nBest regards, \nWashMyLaundry Team</string>



</resources>
