<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

                <item
                    android:id="@+id/activity_main_drawer_your_orders"
                    android:icon="@drawable/ic_bookmark_border_black_48dp"
                    android:title="@string/drawer_category_your_lunch"
                    android:orderInCategory="0" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_assignment_ind_black_24dp"
                    android:title="@string/drawer_category_settings"
                    android:orderInCategory="1"/>
                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/drawer_category_logout"
                    android:orderInCategory="2"/>
</menu>