<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/my_order_main_card_view_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    app:cardCornerRadius="4dp"
    app:cardElevation="0.3dp"
    app:cardMaxElevation="0.3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/my_order_main_linear_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <!-- Details container -->
        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3.9">
            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                app:fontName="Roboto_Bold"
                android:id="@+id/my_orders_recyclerView_provider_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders_recyclerView_provider_name"
                android:layout_marginBottom="3dp"
                android:layout_gravity="top"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/my_orders_recyclerView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders_recyclerView_date"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/my_orders_recyclerView_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order_recyclerView_price"
                android:layout_marginBottom="3dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <!-- Status container -->
        <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
            android:id="@+id/my_orders_recyclerView_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my_orders_recyclerView_status"
            app:fontName="Roboto_Medium"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="2"/>

        <!-- Color container -->
        <androidx.cardview.widget.CardView
            android:id="@+id/my_orders_status_text_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.1"
            android:padding="5dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp">
        </androidx.cardview.widget.CardView>

        <!-- Image container -->
<!--        <LinearLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1.5">-->

<!--            <ImageView-->
<!--                android:id="@+id/list_view_recyclerViewList_image"-->
<!--                android:layout_width="110dip"-->
<!--                android:layout_height="110dip"-->
<!--                android:padding="@dimen/padding_normal" />-->

<!--        </LinearLayout>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>


