<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/main_activity_coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.MainActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/ic_background_1280x1920">

        <!-- IMAGE VIEW LOGO -->
        <ImageView
            android:layout_width="290dp"
            android:layout_height="170dp"
            android:background="@drawable/background_logo"
            android:layout_marginEnd="@dimen/default_large_margin"
            android:layout_marginStart="@dimen/default_large_margin" />

        <!-- TITLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_logo_text"
            android:textSize="@dimen/default_text_size"
            android:layout_margin="@dimen/default_margin"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:textColor="@color/colorPrimaryDark"/>

        <!-- I AM Selection Container-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="I need a wash"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:clickable="false"/>

<!--            <TextView-->
<!--                android:id="@+id/i_need_a_wash"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="I need a wash"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginEnd="15dp"/>-->

            <Switch
                android:id="@+id/washer_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="55dp"
                android:switchPadding="15sp"
                android:layout_gravity="center"
                android:trackTint="@color/cardview_dark_background"
                android:thumbTint="@color/colorAccent"
                android:layout_weight="0.33"/>

<!--            <TextView-->
<!--                android:id="@+id/i_am_washer"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="I am a provider"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="15dp"/>-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="I am a provider"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:clickable="false"/>
        </LinearLayout>

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:id="@+id/all_login_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_large_margin">

            <!-- BUTTON Email -->
            <Button
                android:id="@+id/main_activity_button_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_email"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_email_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginBottom="@dimen/default_buttons_margin_bottom"
                android:drawableStart="@drawable/ic_email_white_icon"/>

            <!-- BUTTON Gmail -->
            <Button
                android:id="@+id/main_activity_button_gmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_gmail"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_primary_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginBottom="@dimen/default_buttons_margin_bottom"
                android:drawableStart="@drawable/ic_google_icon"/>

            <!-- BUTTON Facebook -->
            <Button
                android:id="@+id/main_activity_button_facebook"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login_facebook"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_accent_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginBottom="@dimen/default_buttons_margin_bottom"
                android:drawableStart="@drawable/ic_facebook_icon" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>