<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Import of TopBar-->
    <LinearLayout
        android:id="@+id/top_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:id="@+id/bottom_sheet_back_button"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:tint="@color/cardview_dark_background"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_weight="0.2"/>
            <TextView
                android:id="@+id/bottom_sheet_top_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="0.8">
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_layout_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/top_title_bar"
        android:layout_above="@id/chat_layout_add_message_container">
        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/chat_layout_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_layout_no_messages"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_large_margin"/>
        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_layout_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_layout_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginBottom="45dp">
        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_layout_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/chat_layout_write_message_edit_text"/>
        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/chat_layout_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_btn" />
    </LinearLayout>


</RelativeLayout>