<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    app:cardCornerRadius="4dp"
    app:cardElevation="0.3dp"
    app:cardMaxElevation="0.3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3.5">

            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                app:fontName="Roboto_Bold"
                android:id="@+id/list_view_recyclerView_provider_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view_provider_name"
                android:layout_marginBottom="3dp"
                android:layout_gravity="top"
                android:layout_marginStart="5dp"/>

            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                android:id="@+id/list_view_recyclerView_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view_provider_address"
                android:layout_marginBottom="3dp"
                app:fontName="Roboto_Medium"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"/>

            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                android:id="@+id/list_view__recyclerView_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view_provider_rate"
                android:layout_marginBottom="3dp"
                app:fontName="Roboto_Medium"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"/>

            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                android:id="@+id/list_view__recyclerView_max_bags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view_provider_max_bags"
                android:layout_marginBottom="3dp"
                app:fontName="Roboto_Medium"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_text_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                android:id="@+id/list_view_recyclerView_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_view_detail_distance"
                android:layout_marginBottom="5dp"
                app:fontName="Roboto_Medium"
                android:gravity="start" />


            <!-- Stars container -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:weightSum="5">
                <ImageView
                    android:id="@+id/list_view_recyclerViewList_stars_1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_w_star_icon"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/list_view_recyclerViewList_stars_2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_w_star_icon"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/list_view_recyclerViewList_stars_3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_w_star_icon"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/list_view_recyclerViewList_stars_4"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_w_star_icon"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="visible" />
                <ImageView
                    android:id="@+id/list_view_recyclerViewList_stars_5"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_w_star_icon"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp">

                <ImageView
                    android:id="@+id/list_view_recyclerViewList_delivery_truck_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_delivery_truck_black"
                    android:layout_marginBottom="5dp"
                    android:visibility="invisible"
                    android:gravity="start"/>

                <com.elbaz.eliran.washmylaundry.views.TextViewFontAndStyle
                    android:id="@+id/list_view_recyclerViewList_delivery_text"
                    android:layout_width="wrap_content"
                    android:textStyle=""
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:fontName="Roboto_Medium"
                    android:gravity="start" />

            </LinearLayout>

        </LinearLayout>

        <!-- Image container -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <ImageView
                android:id="@+id/list_view_recyclerViewList_image"
                android:layout_width="110dip"
                android:layout_height="110dip"
                android:padding="@dimen/padding_normal" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


